# ClipTeleporter

./: LICENSE.txt  README.md
Client/: ClipTeleporter.sln
Client/ClipTeleporter/: App.config  Clip.cs  ClipHandler.cs  ClipTeleporter.csproj  DataObjectFormat.cs  FormMain.Designer.cs  FormMain.cs  FormMain.resx  KeyboardHook.cs  Program.cs  Settings.cs  StringCipher.cs  StringCompression.cs
Client/ClipTeleporter/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
Client/Installer/: ClipTeleporterComponents.wxs  Folders.wxs  Installer.wixproj  License.rtf  Package.en-us.wxl  Package.wxs
Playground/: ClipTeleporter_Icon.vsdx
Server/: Dockerfile  README.md  config.py  entrypoint.sh  pyproject.toml  requirements.txt
Server/clipteleporter_server/: __init__.py
Server/clipteleporter_server/blueprints/api/: __init__.py  routes.py
Server/clipteleporter_server/models/: clipboard.py
Server/clipteleporter_server/templates/: index.html
Server/clipteleporter_server/utilities/: __init__.py
Server/migrations/versions/: 64a4a4d346aa_.py
